@@ -6,13 +6,11 @@ import javafx.scene.control.Button;
 import javafx.scene.control.ChoiceBox;
 import javafx.scene.control.TextArea;
 import javafx.scene.control.TextField;
-import javafx.scene.image.Image;
-import javafx.scene.layout.Background;
-import javafx.scene.layout.BackgroundImage;
-import javafx.scene.layout.BorderPane;
 import org.openjfx.model.AnalysisModel;
 
-import java.io.*;
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
 import java.util.*;
 
 public class MainWindow implements Window {
@@ -41,9 +39,6 @@ public class MainWindow implements Window {
     @FXML
     private Button runButton;
 
-    @FXML
-    private BorderPane inputPane;
-
     private final AnalysisModel model = new AnalysisModel();
 
     @FXML
@@ -68,36 +63,37 @@ public class MainWindow implements Window {
     }
 
     private void setWavesBox() {
-        this.wavesBox.getItems().addAll(List.of("Alpha", "Beta", "Gamma", "Delta", "Tetha"));
+        this.wavesBox.getItems().addAll(Arrays.asList("Alpha", "Beta", "Gamma", "Delta", "Tetha"));
     }
 
     private void setAnalysisTypeBox() {
-        this.analysisTypeBox.getItems().addAll(List.of("Мощность", "Ассиметрия"));
+        this.analysisTypeBox.getItems().addAll(Arrays.asList("Мощность", "Ассиметрия"));
+        this.analysisTypeBox.getSelectionModel().select("Мощность");
     }
 
     private boolean isCorrectEegLine(String line) {
-        if (line == null || line.isEmpty() || line.isBlank()) {
+        if (line == null || line.isEmpty()) {
             showWindow(550, 400, "/org/openjfx/view/ErrorWindow.fxml",
                     "/org/openjfx/resources/images/ErrorIcon.png", "Ошибка",
-                    List.of("В списке электродов содержится пустая строка"));
+                    Arrays.asList("В списке электродов содержится пустая строка"));
             return false;
         }
-        var regex = "^[\\d]+:[ ]*[\\d\\w]+$";
+        String regex = "^[\\d]+:[ ]*[\\d\\w]+$";
         if (!line.matches(regex)) {
             showWindow(550, 400, "/org/openjfx/view/ErrorWindow.fxml",
                     "/org/openjfx/resources/images/ErrorIcon.png", "Ошибка",
-                    List.of("Строка электрода не соответствует шаблону \"Номер электрода: название электрода\". " +
+                    Arrays.asList("Строка электрода не соответствует шаблону \"Номер электрода: название электрода\". " +
                             "Убедитесь, что номер является натуральным числом, а название состоит из букв и следующими за ними цифр"));
             return false;
         }
-        var eegIndex = Integer.parseInt(line.split(":")[0]);
+        int eegIndex = Integer.parseInt(line.split(":")[0]);
         return eegIndex >= 0 && eegIndex <= 20;
     }
 
     public void onRunButton() {
-        var eegFlag = checkEegField();
-        var timeRangeFlag = checkTimeRangeField();
-        var timeDelayFlag = checkTimeDelayField();
+        boolean eegFlag = checkEegField();
+        boolean timeRangeFlag = checkTimeRangeField();
+        boolean timeDelayFlag = checkTimeDelayField();
         if (eegFlag && timeDelayFlag && timeRangeFlag) {
             getWaves();
             this.model.setAnalysisChoice(this.analysisTypeBox.getSelectionModel().getSelectedItem());
@@ -110,87 +106,89 @@ public class MainWindow implements Window {
     }
 
     private boolean checkTimeRangeField() {
-        var line = this.timeRangeField.getText();
-        if (line == null || line.isEmpty() || line.isBlank()) {
+        String line = this.timeRangeField.getText();
+        if (line == null || line.isEmpty()) {
             showWindow(550, 400, "/org/openjfx/view/ErrorWindow.fxml",
                     "/org/openjfx/resources/images/ErrorIcon.png", "Ошибка",
-                    List.of("Строка временного окна пуста"));
+                    Arrays.asList("Строка временного окна пуста"));
             return false;
         }
         if (tryParseToDouble(line)) {
-            var number = Double.parseDouble(line);
+            line = line.replace(",", ".");
+            double number = Double.parseDouble(line);
             if (number > 0 && number < 300) {
                 this.model.setTimeRange(number);
                 return true;
             } else {
                 showWindow(550, 400, "/org/openjfx/view/ErrorWindow.fxml",
                         "/org/openjfx/resources/images/ErrorIcon.png", "Ошибка",
-                        List.of("Значение временного окна должно быть в диапазоне от 0 до 300 невключительно"));
+                        Arrays.asList("Значение временного окна должно быть в диапазоне от 0 до 300 невключительно"));
                 return false;
             }
         } else {
             showWindow(550, 400, "/org/openjfx/view/ErrorWindow.fxml",
                     "/org/openjfx/resources/images/ErrorIcon.png", "Ошибка",
-                    List.of("Значение временного окна должно быть действительным числом"));
+                    Arrays.asList("Значение временного окна должно быть действительным числом"));
             return false;
         }
     }
 
     private boolean checkTimeDelayField() {
-        var line = this.delayField.getText();
-        if (line == null || line.isEmpty() || line.isBlank()) {
+        String line = this.delayField.getText();
+        if (line == null || line.isEmpty()) {
             showWindow(550, 400, "/org/openjfx/view/ErrorWindow.fxml",
                     "/org/openjfx/resources/images/ErrorIcon.png", "Ошибка",
-                    List.of("Строка временного интервала пуста"));
+                    Arrays.asList("Строка временного интервала пуста"));
             return false;
         }
         if (tryParseToDouble(line)) {
-            var number = Double.parseDouble(line);
+            line = line.replace(",", ".");
+            double number = Double.parseDouble(line);
             if (number > 0 && number < 50) {
                 this.model.setTimeDelay(number);
                 return true;
             } else {
                 showWindow(550, 400, "/org/openjfx/view/ErrorWindow.fxml",
                         "/org/openjfx/resources/images/ErrorIcon.png", "Ошибка",
-                        List.of("Значение временного интервала должно быть в диапазоне от 0 до 50 невключительно"));
+                        Arrays.asList("Значение временного интервала должно быть в диапазоне от 0 до 50 невключительно"));
                 return false;
             }
         } else {
             showWindow(550, 400, "/org/openjfx/view/ErrorWindow.fxml",
                     "/org/openjfx/resources/images/ErrorIcon.png", "Ошибка",
-                    List.of("Значение временного интервала должно быть действительным числом"));
+                    Arrays.asList("Значение временного интервала должно быть действительным числом"));
             return false;
         }
     }
 
     private boolean checkEegField() {
         this.model.setEegDict(new HashMap<>());
-        var line = this.eegField.getText();
-        if (line.isEmpty() || line.isBlank()) {
+        String line = this.eegField.getText();
+        if (line.isEmpty()) {
             showWindow(550, 400, "/org/openjfx/view/ErrorWindow.fxml",
                     "/org/openjfx/resources/images/ErrorIcon.png", "Ошибка",
-                    List.of("В поле электродов содержится пустая строка"));
+                    Arrays.asList("В поле электродов содержится пустая строка"));
             return false;
         } else {
-            var lines = line.split("\\r?\\n|\\r");
-            var participantsCount = this.participantsBox.getSelectionModel().getSelectedItem().equals("Все")
+            String[] lines = line.split("\\r?\\n|\\r");
+            int participantsCount = this.participantsBox.getSelectionModel().getSelectedItem().equals("Все")
                     ? this.model.getParticipants().size() : 1;
-            var maxLimit = participantsCount < 3 ? participantsCount * AnalysisModel.getRowsPerParticipant() - 3 : AnalysisModel.getEegCount();
+            int maxLimit = participantsCount < 3 ? participantsCount * AnalysisModel.getRowsPerParticipant() - 3 : AnalysisModel.getEegCount();
             if (lines.length == 0 || lines.length > maxLimit) {
                 showWindow(550, 400, "/org/openjfx/view/ErrorWindow.fxml",
                         "/org/openjfx/resources/images/ErrorIcon.png", "Ошибка",
-                        List.of("Для возможности вычисления p значений при выбранном количестве участников максимальное количество электродов равно " + maxLimit));
+                        Arrays.asList("Для возможности вычисления p значений при выбранном количестве участников максимальное количество электродов равно " + maxLimit));
                 return false;
             } else {
-                for (var curLine : lines) {
+                for (String curLine : lines) {
                     if (isCorrectEegLine(curLine)) {
-                        var parts = curLine.split(":[\\s]*");
-                        var index = Integer.parseInt(parts[0]);
+                        String[] parts = curLine.split(":[\\s]*");
+                        int index = Integer.parseInt(parts[0]);
                         if (this.model.getEegDict().containsKey(index)) {
                             this.model.setEegDict(new HashMap<>());
                             showWindow(550, 400, "/org/openjfx/view/ErrorWindow.fxml",
                                     "/org/openjfx/resources/images/ErrorIcon.png", "Ошибка",
-                                    List.of("В списке электродов содержатся одинаковые номера"));
+                                    Arrays.asList("В списке электродов содержатся одинаковые номера"));
                             return false;
                         }
                         this.model.getEegDict().put(index, parts[1]);
@@ -198,7 +196,7 @@ public class MainWindow implements Window {
                         this.model.setEegDict(new HashMap<>());
                         showWindow(550, 400, "/org/openjfx/view/ErrorWindow.fxml",
                                 "/org/openjfx/resources/images/ErrorIcon.png", "Ошибка",
-                                List.of("Значение номера электрода должно быть в диапазоне от 0 до 20 включительно"));
+                                Arrays.asList("Значение номера электрода должно быть в диапазоне от 0 до 20 включительно"));
                         return false;
                     }
                 }
@@ -216,11 +214,11 @@ public class MainWindow implements Window {
     }
 
     private String mapToString(Map<Integer, String> map) {
-        var result = "{";
-        var entryLines = new ArrayList<String>();
-        for (var entry : map.entrySet()) {
-            var key = entry.getKey();
-            var value = entry.getValue();
+        String result = "{";
+        List<String> entryLines = new ArrayList<>();
+        for (Map.Entry<Integer, String> entry : map.entrySet()) {
+            int key = entry.getKey();
+            String value = entry.getValue();
             entryLines.add(key + ": " + "'" + value + "'");
         }
         result += String.join(", ", entryLines) + "}";
@@ -228,52 +226,51 @@ public class MainWindow implements Window {
     }
 
     private String listToString(List<String> list) {
-        var lines = new ArrayList<String>();
-        for (var line : list) {
+        List<String> lines = new ArrayList<>();
+        for (String line : list) {
             lines.add("'" + line + "'");
         }
         return "[" + String.join(", ", lines) + "]";
     }
 
     private void parseOutput(String output) {
-        var lines = output.replace("{", "").replace("}", "")
+        String[] lines = output.replace("{", "").replace("}", "")
                 .split(", ");
-        var formattedLines = new ArrayList<String>();
-        for (var line : lines) {
-            var parts = line.replace("'", "").split(": ");
-            var formattedLine = parts[0] + ": " + parts[1];
+        List<String> formattedLines = new ArrayList<>();
+        for (String line : lines) {
+            String[] parts = line.replace("'", "").split(": ");
+            String formattedLine = parts[0] + ": " + parts[1];
             formattedLines.add(formattedLine);
         }
         this.pValuesArea.setText(String.join(System.lineSeparator(), formattedLines));
     }
 
     private void parseSignificantFeatures(String output) {
-        var formattedLine = output.replace("[", "").replace("]", "").replace("'", "");
-        if (formattedLine.isEmpty() || formattedLine.isBlank()) {
+        String formattedLine = output.replace("[", "").replace("]", "").replace("'", "");
+        if (formattedLine.isEmpty()) {
             this.significantArea.setText("Нет значимых критериев");
         } else {
-            var formattedLines = formattedLine.split(", ");
+            String[] formattedLines = formattedLine.split(", ");
             this.significantArea.setText(String.join(System.lineSeparator(), formattedLines));
         }
     }
 
     private String mapAnalysisType() {
-        var item = this.analysisTypeBox.getSelectionModel().getSelectedItem();
+        String item = this.analysisTypeBox.getSelectionModel().getSelectedItem();
         if (item.equals("Мощность")) return "power";
         else return "asymmetry";
     }
 
     private void calculateFeaturesSignificance() {
-        var participantsString = listToString(model.getParticipants());
-        var channelsString = mapToString(model.getEegDict());
-        var wavesString = model.getWave();
-        var timeRangeString = String.valueOf(model.getTimeRange());
-        var timeDelayString = String.valueOf(model.getTimeDelay());
-        var DBPath = model.getDBPath().replace("\\", "/");
-        var analysisType = mapAnalysisType();
-
+        String participantsString = listToString(model.getParticipants());
+        String channelsString = mapToString(model.getEegDict());
+        String wavesString = model.getWave();
+        String timeRangeString = String.valueOf(model.getTimeRange());
+        String timeDelayString = String.valueOf(model.getTimeDelay());
+        String DBPath = model.getDBPath().replace("\\", "/");
+        String analysisType = mapAnalysisType();
         ProcessBuilder pb = new ProcessBuilder("python3",
-                "src\\org\\openjfx\\scripts\\InputToAnalysis.py",
+                System.getProperty("user.dir") + "/scripts/InputToAnalysis.py",
                 DBPath, participantsString, channelsString, wavesString, timeRangeString, timeDelayString, analysisType);
         try {
             Process p = pb.start();
@@ -289,7 +286,7 @@ public class MainWindow implements Window {
             if (outputs.size() == 1) {
                 showWindow(550, 400, "/org/openjfx/view/ErrorWindow.fxml",
                         "/org/openjfx/resources/images/ErrorIcon.png", "Ошибка",
-                        List.of("Произошла ошибка при работе с файлами эксперимента. Пожалуйста, убедитесь, " +
+                        Arrays.asList("Произошла ошибка при работе с файлами эксперимента. Пожалуйста, убедитесь, что в папке с jar-файлом есть scripts-папка, " +
                                 "что по указанному пути есть папки с данными участников и что EEG-файлы лежат внутри папки CSV_export. Проверьте наличие csv файлов price, " +
                                 "WTP и taste и txt файлов first, choco_order и times. Проверьте, не открыты ли файлы внутри папки участника эксперимента"));
             }
@@ -300,13 +297,13 @@ public class MainWindow implements Window {
         } catch (IOException e) {
             showWindow(550, 400, "/org/openjfx/view/ErrorWindow.fxml",
                     "/org/openjfx/resources/images/ErrorIcon.png", "Ошибка",
-                    List.of("Пожалуйста, проверьте наличие файла InputToAnalysis.py в папке src/org/openjfx/scripts"));
+                    Arrays.asList("Пожалуйста, проверьте наличие файла InputToAnalysis.py в папке src/org/openjfx/scripts"));
         }
     }
 
     private boolean tryParseToDouble(String val) {
-        var doubleRegex = "^[\\d]+[.,][\\d]+$";
-        var intRegex = "^[\\d]+$";
+        String doubleRegex = "^[\\d]+[.,][\\d]+$";
+        String intRegex = "^[\\d]+$";
         return val.matches(doubleRegex) || val.matches(intRegex);
     }
 
@@ -329,23 +326,11 @@ public class MainWindow implements Window {
                 "/org/openjfx/resources/images/InfoIcon.png", "О программе");
     }
 
-    private void setBackgroundImage() {
-        try {
-            Image image = new Image(new FileInputStream("src/org/openjfx/resources/images/mainBackground.png"));
-            inputPane.setBackground(new Background(new BackgroundImage(image, null, null, null, null)));
-        } catch (FileNotFoundException e) {
-            showWindow(550, 400, "/org/openjfx/view/ErrorWindow.fxml",
-                    "/org/openjfx/resources/images/ErrorIcon.png", "Ошибка",
-                    List.of("Пожалуйста, проверьте наличие файла mainBackground в папке src/org/openjfx/resources/images"));
-        }
-    }
-
     @FXML
     public void initialize() {
         runButton.setDisable(true);
         setWavesBox();
         setAnalysisTypeBox();
-        setBackgroundImage();
     }
 }
 
